--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "axios": "^1.6.8",
     "expo": "^49.0.0",
     "expo-asset": "~8.10.1",
     "expo-status-bar": "~1.6.0",
