--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^49.0.0",
     "expo-asset": "~8.10.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
